<resources>
    <string name="app_name">Mad maze</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--region TITLES-->
    <string name="title_home">Home</string>
    <!--region NORMAL MODE-->
    <string name="title_sever_list">Servers list</string>
    <!--endregion NORMAL MODE-->
    <!--region SERVER MODE-->
    <string name="title_choose_level">Choose a level</string>
    <!--endregion SERVER MODE-->
    <string name="title_scores">Scores</string>
    <string name="title_best_scores">High scores [with teams]</string>
    <string name="title_current_score">Current score</string>
    <!--endregion TITLES-->

    <!--region ALERTS-->
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <!-- TODO: modify these messages -->
    <string name="alert_dialog_start_host_or_not">Do you want to host the game?</string>
    <string name="alert_dialog_options">This page will be taken care of soon.</string>
    <string name="alert_dialog_about">MadMaze is an Android project created by Thomas Lovis, Julia Németh and Kevin Vulliemin. \n\n3dlm, 2017\n\nHE-ARC, Neuchâtel, Switzerland</string>
    <string name="alert_dialog_help">With a friend\'s help, try to roll the ball in the hole.</string>
    <string name="alert_dialog_quit">Are you sure you want to quit the game?</string>

    <string name="alert_dialog_connect_to_server">Do you want to connect to this server?</string>
    <string name="alert_dialog_select_level">Do you want to choose this level?</string>
    <string name="alert_dialog_server_or_not">Do you want to host the server?</string>
    <string name="alert_dialog_go_back_to_menu">Do you want to return to the menu?</string>
    <!--endregion ALERTS-->

    <!--region BUTTONS-->
    <!--region GENERAL-->
    <string name="btn_quit">Quit</string>
    <string name="btn_select">Select</string>
    <string name="btn_go_back">Go Back</string>
    <!--endregion GENERAL-->

    <!--region HOME-->
    <string name="btn_startGame">Start New Game</string>
    <string name="btn_options">Options</string>
    <string name="btn_help">Help</string>
    <string name="btn_about">About</string>
    <!--endregion HOME-->

    <!--region SERVER LIST -->
    <string name="btn_refresh">Refresh</string>
    <string name="btn_connect">Connect</string>
    <!--endregion SERVER LIST -->

    <!--region CHOOSE LEVEL -->
    <string name="btn_random">Random</string>
    <!--endregion CHOOSE LEVEL -->

    <!--region SCORES -->
    <string name="btn_go_back_to_menu">Go back to Menu</string>
    <string name="btn_redo">Redo</string>
    <!--endregion SCORES -->



    <!--endregion BUTTONS-->



</resources>
