<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="madmaze.hearc.ch.madmaze.fragments.HomeFragment">

    <!--region BUTTONS-->
    <!-- START -->
    <Button
        android:id="@+id/btn_home_startGame"
        android:layout_width="120dp"

        android:layout_height="40dp"
        android:fontFamily="monospace"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorPrimaryLight"
        android:text="@string/btn_startGame"
        android:textAlignment="center"

        android:textSize="10sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294" />

    <!-- OPTIONS -->
    <Button
        android:id="@+id/btn_home_options"
        android:layout_width="120dp"

        android:layout_height="40dp"
        android:layout_marginTop="8dp"

        android:fontFamily="monospace"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorPrimaryLight"
        android:text="@string/btn_options"

        android:textAlignment="center"
        android:textSize="10sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_home_startGame"
        app:layout_constraintVertical_bias="0.0" />

    <!-- HELP -->
    <Button
        android:id="@+id/btn_home_help"
        android:layout_width="120dp"

        android:layout_height="40dp"
        android:layout_marginTop="8dp"

        android:fontFamily="monospace"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorPrimaryLight"
        android:text="@string/btn_help"

        android:textAlignment="center"
        android:textSize="10sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_home_options"
        app:layout_constraintVertical_bias="0.0" />

    <!-- ABOUT -->
    <Button
        android:id="@+id/btn_home_about"
        android:layout_width="120dp"

        android:layout_height="40dp"
        android:layout_marginTop="8dp"

        android:fontFamily="monospace"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorPrimaryLight"
        android:text="@string/btn_about"

        android:textAlignment="center"
        android:textSize="10sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_home_help"
        app:layout_constraintVertical_bias="0.0" />

    <!-- QUIT -->
    <Button
        android:id="@+id/btn_home_quit"
        android:layout_width="120dp"

        android:layout_height="40dp"

        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorPrimaryLight"
        android:text="@string/btn_quit"
        android:textAlignment="center"
        android:textSize="10sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_home_about"
        app:layout_constraintVertical_bias="0.0" />

    <!--endregion BUTTONS-->

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="false"
        android:background="@drawable/wptest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <!-- TITLE -->
    <ImageView
        android:id="@+id/madmaze_logo"
        android:layout_width="393dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/madmaze"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/home_logo"
        android:layout_width="119dp"
        android:layout_height="32dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/home"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/madmaze_logo" />

</android.support.constraint.ConstraintLayout>
